--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jsdom",
-  "version": "11.7.0",
+  "name": "regevbr-jsdom",
+  "version": "11.7.1",
   "description": "A JavaScript implementation of many web standards",
   "keywords": [
     "dom",
